// Configuración específica del módulo common - CORE GENÉRICO (v1.1.0)
// Solo dependencias verdaderamente comunes a TODOS los frameworks

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

dependencies {

    // === CONFIGURACIÓN Y PROCESAMIENTO DE ARCHIVOS ===
    // JSON processing básico (para DataUtilities y ConfigurationProvider)
    api 'com.fasterxml.jackson.core:jackson-core:2.15.2'
    api 'com.fasterxml.jackson.core:jackson-databind:2.15.2'
    api 'com.fasterxml.jackson.core:jackson-annotations:2.15.2'
    api 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2'

    // JSON library básica (para DataUtilities)
    api 'org.json:json:20231013'

    // YAML processing (para ConfigurationProvider)
    api 'org.yaml:snakeyaml:2.2'

    // === LOGGING ===
    api 'org.slf4j:slf4j-api:2.0.9'
    api 'ch.qos.logback:logback-classic:1.5.13'
    api 'org.fusesource.jansi:jansi:2.4.0'  // Para colores ANSI en consola

    // === CUCUMBER (para hooks y contexto comunes) ===
    api 'io.cucumber:cucumber-java:7.18.0'

    // === UTILIDADES GENERALES ===
    api 'org.apache.commons:commons-lang3:3.18.0'

    // === TESTING FRAMEWORKS (base común) ===
    api 'org.junit.jupiter:junit-jupiter:5.10.0'
    api 'org.junit.jupiter:junit-jupiter-engine:5.10.0'
    api 'org.junit.jupiter:junit-jupiter-api:5.10.0'

    // === SEGURIDAD Y ENCRIPTACIÓN (genérico) ===
    api 'org.bouncycastle:bcprov-jdk18on:1.78.1'

    // === UTILIDADES DE ARCHIVO E I/O ===
    api 'commons-io:commons-io:2.14.0'

    // === JSON PATH & JSON COMPARISON (usado por DataUtilities) ===
    api 'com.jayway.jsonpath:json-path:2.9.0'
    api 'org.skyscreamer:jsonassert:1.5.1'

    // === REPORTING (Extent Reports para HTML reports) ===
    api 'com.aventstack:extentreports:5.1.1'

    // === HTTP CLIENT (para Jira integration) ===
    api 'org.apache.httpcomponents:httpclient:4.5.14'
    api 'org.apache.httpcomponents:httpmime:4.5.14'

    // === DATABASE CONNECTION POOLING & DRIVERS ===
    // HikariCP para gestión genérica de conexiones
    api 'com.zaxxer:HikariCP:5.0.1'

    // JDBC Drivers (disponibles para todos los módulos)
    // Nota: Cada proyecto puede usar el driver que necesite
    api 'mysql:mysql-connector-java:8.0.33'
    api 'org.postgresql:postgresql:42.7.7'
    api 'com.microsoft.sqlserver:mssql-jdbc:12.4.1.jre11'
    api 'com.oracle.database.jdbc:ojdbc11:23.2.0.0'

    // ========================================================================
    // NOTAS DE ARQUITECTURA:
    //
    // HikariCP está en COMMON porque:
    // - Es infraestructura genérica de pooling
    // - testdata/ y database/ (en common) lo necesitan
    // - No depende de drivers específicos
    //
    // Drivers JDBC permanecen en API-CORE porque:
    // - Son específicos por tipo de BD (Oracle, PostgreSQL, etc.)
    // - No todos los módulos los necesitan
    // - api-core ya los tiene y hereda common
    //
    // Otras dependencias en api-core:
    // - Unirest (HTTP client avanzado)
    // - JSON Schema Validator (solo para API REST)
    // - HTTP Components (específico API)
    // ========================================================================
}

// NOTA: La configuración de publicación está en el build.gradle raíz
// Para publicar: ./gradlew :common:publishToMavenLocal

// ============================================================================
// INCLUSIÓN DE SCRIPTS EN JAR
// ============================================================================
// Los scripts utils.sh y utils.ps1 se incluyen en el JAR para distribución
// cross-platform. Los módulos pueden extraerlos con sync-utils.sh/ps1

tasks.register('copyScriptsToResources', Copy) {
    description = 'Copia scripts utils.sh y utils.ps1 a META-INF/scripts/ para incluirlos en el JAR'
    group = 'build'

    from(project.rootProject.file('scripts')) {
        include 'utils.sh'
        include 'utils.ps1'
    }
    into layout.buildDirectory.dir('resources/main/META-INF/scripts')

    doLast {
        logger.lifecycle("✅ Scripts copiados a META-INF/scripts/")
    }
}

// Ejecutar copyScriptsToResources antes de processResources
tasks.named('processResources') {
    dependsOn 'copyScriptsToResources'
}

// Asegurar que jar incluye los scripts
tasks.named('jar') {
    dependsOn 'copyScriptsToResources'

    doLast {
        logger.lifecycle("📦 JAR de common incluye utils.sh y utils.ps1 en META-INF/scripts/")
    }
}
